# real-time-charts-with-flask

./: Dockerfile  LICENSE  Makefile  Pipfile  README.md  application.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
.do/: deploy.template.yaml
.github/: dependabot.yml
templates/: index.html
