[tool.poetry]
name = "real-time-charts-with-flask"
version = "0.2.0"
description = "Sample application for the blog Creating Real-Time Charts with Flask"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
